--- a/TestAssembler/TestAssembler/TestAssembler.vcxproj
+++ b/TestAssembler/TestAssembler/TestAssembler.vcxproj
@@ -143,17 +143,35 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Assembler.h" />
+    <ClInclude Include="Emulator.h" />
+    <ClInclude Include="Errors.h" />
+    <ClInclude Include="FileAccess.h" />
+    <ClInclude Include="Instruction.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SymTab.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TestTrans.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Assem.cpp" />
+    <ClCompile Include="Assembler.cpp" />
+    <ClCompile Include="Emulator.cpp" />
+    <ClCompile Include="Errors.cpp" />
+    <ClCompile Include="FileAccess.cpp" />
+    <ClCompile Include="Instruction.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SymTab.cpp" />
     <ClCompile Include="TestAssembler.cpp" />
+    <ClCompile Include="TestTrans.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="duck.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
